Fix wrong cssnext project URL
The `cssnext.io` does not working. The right URL seems to be a github one.

--- a/fr.html
+++ b/fr.html
@@ -93,7 +93,7 @@
       "Consulter l'artcile sur les interfaces Web">interfaces
       utilisateurs</a> en utilisant les <a href=
       "https://developer.mozilla.org/en-US/docs/Web/Web_Components" lang=
-      "en">Web-Components</a>, CSS3 / <a href="http://cssnext.io/" lang=
+      "en">Web-Components</a>, CSS3 / <a href="http://cssnext.github.io/" lang=
       "en">CSS-next</a>, <a href=
       "https://developer.mozilla.org/en-US/docs/Web/JavaScript/New_in_JavaScript/ECMAScript_Next_support_in_Mozilla"
       lang="en">JavaScript ES2016 / ES2017</a>, <a href=
